--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "PORT=3000 node server.js & PORT=3001 node server.js",
+    "dev": "concurrently \"cross-env PORT=3000 node server.js\" \"cross-env PORT=3001 node server.js\"",
     "build": "npm run build:client && npm run build:server",
     "build:client": "vite build --outDir dist/client",
     "build:server": "vite build --outDir dist/server --ssr src/server-entry.jsx",
-    "start": "ENV=production node server.js",
+    "start": "cross-env ENV=production node server.js",
     "lint": "eslint ."
   },
   "dependencies": {
@@ -32,6 +32,8 @@
     "globals": "15.15.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
-    "vite": "6.2.1"
+    "vite": "6.2.1",
+    "concurrently": "^8.0.1",
+    "cross-env": "^7.0.3"
   }
 }
