--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lucide-react": "^0.542.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-router-dom": "7.3.0",
+    "react-router-dom": "^7.3.0",
     "socket.io": "4.8.1",
     "socket.io-client": "4.8.1"
   },
@@ -26,14 +26,14 @@
     "@types/react-dom": "19.0.4",
     "@vitejs/plugin-react-swc": "3.8.0",
     "autoprefixer": "^10.4.21",
+    "concurrently": "^8.0.1",
+    "cross-env": "^7.0.3",
     "eslint": "9.21.0",
     "eslint-plugin-react-hooks": "5.1.0",
     "eslint-plugin-react-refresh": "0.4.19",
     "globals": "15.15.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
-    "vite": "6.2.1",
-    "concurrently": "^8.0.1",
-    "cross-env": "^7.0.3"
+    "vite": "6.2.1"
   }
 }
