--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-  "dev": "cross-env PORT=3000 node server.js",
+    "dev": "cross-env PORT=3000 node server.js",
     "build": "npm run build:client && npm run build:server",
     "build:client": "vite build --outDir dist/client",
     "build:server": "vite build --outDir dist/server --ssr src/server-entry.jsx",
@@ -17,6 +17,7 @@
     "lucide-react": "^0.542.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
     "socket.io": "4.8.1",
     "socket.io-client": "4.8.1"
@@ -27,11 +28,11 @@
     "@types/react-dom": "19.0.4",
     "@vitejs/plugin-react-swc": "3.8.0",
     "autoprefixer": "^10.4.21",
+    "cross-env": "^7.0.3",
     "eslint": "9.21.0",
     "eslint-plugin-react-hooks": "5.1.0",
     "eslint-plugin-react-refresh": "0.4.19",
     "globals": "15.15.0",
-  "cross-env": "^7.0.3",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "vite": "6.2.1"
