--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.542.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-easy-crop": "^5.5.3",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
     "socket.io": "4.8.1",
