--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "crypto-js": "^4.2.0",
     "express": "^4.21.2",
     "lucide-react": "^0.542.0",
